// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gen.float().between(-10, -1).betweenPrecision(0, 2) 1`] = `
"-2.8 (c = 88.88888888888889)
..-2 (c = 0)
..-2.4 (c = 44.44444444444444)
....-2.2 (c = 22.22222222222222)
......-2.1 (c = 11.11111111111111)
....-2.3 (c = 33.33333333333333)
......-2.1 (c = 11.11111111111111)
..-2.6 (c = 66.66666666666666)
....-2.3 (c = 33.33333333333333)
......-2.1 (c = 11.11111111111111)
......-2.2 (c = 22.22222222222222)
....-2.5 (c = 55.55555555555556)
......-2.2 (c = 22.22222222222222)
........-2.1 (c = 11.11111111111111)
..-2.7 (c = 77.77777777777779)
....-2.3 (c = 33.33333333333333)
......-2.1 (c = 11.11111111111111)
......-2.2 (c = 22.22222222222222)
....-2.5 (c = 55.55555555555556)
......-2.2 (c = 22.22222222222222)
........-2.1 (c = 11.11111111111111)"
`;

exports[`Gen.float().between(-10, -1).betweenPrecision(0, 2) 2`] = `
"-6 (c = 57.14285714285714)
..-2 (c = 0)
..-4 (c = 28.57142857142857)
....-3 (c = 14.285714285714285)
..-5 (c = 42.857142857142854)
....-3 (c = 14.285714285714285)"
`;

exports[`Gen.float().between(-10, -1).betweenPrecision(0, 2) 3`] = `
"-3.7 (c = 92.06349206349208)
..-2.7 (c = 77.77777777777779)
....-2 (c = 0)
....-2.3 (c = 33.33333333333333)
......-2.1 (c = 11.11111111111111)
......-2.2 (c = 22.22222222222222)
....-2.5 (c = 55.55555555555556)
......-2.2 (c = 22.22222222222222)
........-2.1 (c = 11.11111111111111)
......-2.4 (c = 44.44444444444444)
....-2.6 (c = 66.66666666666666)
......-2.4 (c = 44.44444444444444)
........-2.2 (c = 22.22222222222222)
..........-2.1 (c = 11.11111111111111)
..-3 (c = 14.285714285714285)
..-3.3 (c = 47.61904761904761)
....-3.1 (c = 25.396825396825395)
....-3.2 (c = 36.507936507936506)
..-3.5 (c = 69.84126984126985)
....-3.2 (c = 36.507936507936506)
......-3.1 (c = 25.396825396825395)
....-3.4 (c = 58.73015873015873)
..-3.6 (c = 80.95238095238093)
....-3.4 (c = 58.73015873015873)
......-3.2 (c = 36.507936507936506)
........-3.1 (c = 25.396825396825395)"
`;

exports[`Gen.float().between(-10, -1).betweenPrecision(0, 2) 4`] = `
"-5.3 (c = 76.19047619047618)
..-2.3 (c = 33.33333333333333)
....-2 (c = 0)
....-2.1 (c = 11.11111111111111)
....-2.2 (c = 22.22222222222222)
..-3.3 (c = 47.61904761904761)
....-3 (c = 14.285714285714285)
....-3.1 (c = 25.396825396825395)
....-3.2 (c = 36.507936507936506)
..-4.3 (c = 61.9047619047619)
....-4 (c = 28.57142857142857)
....-4.1 (c = 39.682539682539684)
....-4.2 (c = 50.79365079365079)
..-5 (c = 42.857142857142854)
..-5.1 (c = 53.96825396825396)
..-5.2 (c = 65.07936507936508)"
`;

exports[`Gen.float().between(-10, -1).betweenPrecision(0, 2) 5`] = `
"-6.2 (c = 79.36507936507937)
..-2.2 (c = 22.22222222222222)
....-2 (c = 0)
....-2.1 (c = 11.11111111111111)
..-4.2 (c = 50.79365079365079)
....-3.2 (c = 36.507936507936506)
......-3 (c = 14.285714285714285)
......-3.1 (c = 25.396825396825395)
....-4 (c = 28.57142857142857)
....-4.1 (c = 39.682539682539684)
..-5.2 (c = 65.07936507936508)
....-3.2 (c = 36.507936507936506)
......-3 (c = 14.285714285714285)
......-3.1 (c = 25.396825396825395)
....-5 (c = 42.857142857142854)
....-5.1 (c = 53.96825396825396)
..-6 (c = 57.14285714285714)
..-6.1 (c = 68.25396825396825)"
`;

exports[`Gen.float().between(-10, -1).betweenPrecision(0, 2) 6`] = `
"-5 (c = 42.857142857142854)
..-2 (c = 0)
..-3 (c = 14.285714285714285)
..-4 (c = 28.57142857142857)"
`;

exports[`Gen.float().between(-10, -1).betweenPrecision(0, 2) 7`] = `
"-6 (c = 57.14285714285714)
..-2 (c = 0)
..-4 (c = 28.57142857142857)
....-3 (c = 14.285714285714285)
..-5 (c = 42.857142857142854)
....-3 (c = 14.285714285714285)"
`;

exports[`Gen.float().between(-10, -1).betweenPrecision(0, 2) 8`] = `
"-6.9 (c = 157.14285714285714)
..-2.9 (c = 100)
....-2 (c = 0)
....-2.4 (c = 44.44444444444444)
......-2.2 (c = 22.22222222222222)
........-2.1 (c = 11.11111111111111)
......-2.3 (c = 33.33333333333333)
........-2.1 (c = 11.11111111111111)
....-2.6 (c = 66.66666666666666)
......-2.3 (c = 33.33333333333333)
........-2.1 (c = 11.11111111111111)
........-2.2 (c = 22.22222222222222)
......-2.5 (c = 55.55555555555556)
........-2.2 (c = 22.22222222222222)
..........-2.1 (c = 11.11111111111111)
....-2.7 (c = 77.77777777777779)
......-2.3 (c = 33.33333333333333)
........-2.1 (c = 11.11111111111111)
........-2.2 (c = 22.22222222222222)
......-2.5 (c = 55.55555555555556)
........-2.2 (c = 22.22222222222222)
..........-2.1 (c = 11.11111111111111)
....-2.8 (c = 88.88888888888889)
..-4.9 (c = 128.57142857142856)
....-3.9 (c = 114.28571428571428)
......-3 (c = 14.285714285714285)
......-3.4 (c = 58.73015873015873)
........-3.2 (c = 36.507936507936506)
..........-3.1 (c = 25.396825396825395)
........-3.3 (c = 47.61904761904761)
..........-3.1 (c = 25.396825396825395)
......-3.6 (c = 80.95238095238093)
........-3.3 (c = 47.61904761904761)
..........-3.1 (c = 25.396825396825395)
..........-3.2 (c = 36.507936507936506)
........-3.5 (c = 69.84126984126985)
..........-3.2 (c = 36.507936507936506)
............-3.1 (c = 25.396825396825395)
......-3.7 (c = 92.06349206349208)
........-3.3 (c = 47.61904761904761)
..........-3.1 (c = 25.396825396825395)
..........-3.2 (c = 36.507936507936506)
........-3.5 (c = 69.84126984126985)
..........-3.2 (c = 36.507936507936506)
............-3.1 (c = 25.396825396825395)
......-3.8 (c = 103.17460317460316)
....-4 (c = 28.57142857142857)
....-4.4 (c = 73.01587301587301)
......-4.2 (c = 50.79365079365079)
........-4.1 (c = 39.682539682539684)
......-4.3 (c = 61.9047619047619)
........-4.1 (c = 39.682539682539684)
....-4.6 (c = 95.23809523809523)
......-4.3 (c = 61.9047619047619)
........-4.1 (c = 39.682539682539684)
........-4.2 (c = 50.79365079365079)
......-4.5 (c = 84.12698412698413)
........-4.2 (c = 50.79365079365079)
..........-4.1 (c = 39.682539682539684)
....-4.7 (c = 106.34920634920636)
......-4.3 (c = 61.9047619047619)
........-4.1 (c = 39.682539682539684)
........-4.2 (c = 50.79365079365079)
......-4.5 (c = 84.12698412698413)
........-4.2 (c = 50.79365079365079)
..........-4.1 (c = 39.682539682539684)
....-4.8 (c = 117.46031746031746)
..-5.9 (c = 142.85714285714286)
....-3.9 (c = 114.28571428571428)
......-3 (c = 14.285714285714285)
......-3.4 (c = 58.73015873015873)
........-3.2 (c = 36.507936507936506)
..........-3.1 (c = 25.396825396825395)
........-3.3 (c = 47.61904761904761)
..........-3.1 (c = 25.396825396825395)
......-3.6 (c = 80.95238095238093)
........-3.3 (c = 47.61904761904761)
..........-3.1 (c = 25.396825396825395)
..........-3.2 (c = 36.507936507936506)
........-3.5 (c = 69.84126984126985)
..........-3.2 (c = 36.507936507936506)
............-3.1 (c = 25.396825396825395)
......-3.7 (c = 92.06349206349208)
........-3.3 (c = 47.61904761904761)
..........-3.1 (c = 25.396825396825395)
..........-3.2 (c = 36.507936507936506)
........-3.5 (c = 69.84126984126985)
..........-3.2 (c = 36.507936507936506)
............-3.1 (c = 25.396825396825395)
......-3.8 (c = 103.17460317460316)
....-5 (c = 42.857142857142854)
....-5.4 (c = 87.30158730158729)
......-5.2 (c = 65.07936507936508)
........-5.1 (c = 53.96825396825396)
......-5.3 (c = 76.19047619047618)
........-5.1 (c = 53.96825396825396)
....-5.6 (c = 109.52380952380952)
......-5.3 (c = 76.19047619047618)
........-5.1 (c = 53.96825396825396)
........-5.2 (c = 65.07936507936508)"
`;

exports[`Gen.float().between(-10, -1).betweenPrecision(0, 2) 9`] = `
"-3 (c = 14.285714285714285)
..-2 (c = 0)"
`;

exports[`Gen.float().between(-10, -1).betweenPrecision(0, 2) 10`] = `
"-6.6 (c = 123.8095238095238)
..-2.6 (c = 66.66666666666666)
....-2 (c = 0)
....-2.3 (c = 33.33333333333333)
......-2.1 (c = 11.11111111111111)
......-2.2 (c = 22.22222222222222)
....-2.4 (c = 44.44444444444444)
......-2.2 (c = 22.22222222222222)
........-2.1 (c = 11.11111111111111)
....-2.5 (c = 55.55555555555556)
......-2.2 (c = 22.22222222222222)
........-2.1 (c = 11.11111111111111)
..-4.6 (c = 95.23809523809523)
....-3.6 (c = 80.95238095238093)
......-3 (c = 14.285714285714285)
......-3.3 (c = 47.61904761904761)
........-3.1 (c = 25.396825396825395)
........-3.2 (c = 36.507936507936506)
......-3.4 (c = 58.73015873015873)
........-3.2 (c = 36.507936507936506)
..........-3.1 (c = 25.396825396825395)
......-3.5 (c = 69.84126984126985)
........-3.2 (c = 36.507936507936506)
..........-3.1 (c = 25.396825396825395)
....-4 (c = 28.57142857142857)
....-4.3 (c = 61.9047619047619)
......-4.1 (c = 39.682539682539684)
......-4.2 (c = 50.79365079365079)
....-4.4 (c = 73.01587301587301)
......-4.2 (c = 50.79365079365079)
........-4.1 (c = 39.682539682539684)
....-4.5 (c = 84.12698412698413)
......-4.2 (c = 50.79365079365079)
........-4.1 (c = 39.682539682539684)
..-5.6 (c = 109.52380952380952)
....-3.6 (c = 80.95238095238093)
......-3 (c = 14.285714285714285)
......-3.3 (c = 47.61904761904761)
........-3.1 (c = 25.396825396825395)
........-3.2 (c = 36.507936507936506)
......-3.4 (c = 58.73015873015873)
........-3.2 (c = 36.507936507936506)
..........-3.1 (c = 25.396825396825395)
......-3.5 (c = 69.84126984126985)
........-3.2 (c = 36.507936507936506)
..........-3.1 (c = 25.396825396825395)
....-5 (c = 42.857142857142854)
....-5.3 (c = 76.19047619047618)
......-5.1 (c = 53.96825396825396)
......-5.2 (c = 65.07936507936508)
....-5.4 (c = 87.30158730158729)
......-5.2 (c = 65.07936507936508)
........-5.1 (c = 53.96825396825396)
....-5.5 (c = 98.4126984126984)
......-5.2 (c = 65.07936507936508)
........-5.1 (c = 53.96825396825396)
..-6 (c = 57.14285714285714)
..-6.3 (c = 90.47619047619047)
....-6.1 (c = 68.25396825396825)
....-6.2 (c = 79.36507936507937)
..-6.4 (c = 101.58730158730158)
....-6.2 (c = 79.36507936507937)
......-6.1 (c = 68.25396825396825)
..-6.5 (c = 112.6984126984127)
....-6.2 (c = 79.36507936507937)
......-6.1 (c = 68.25396825396825)"
`;

exports[`Gen.float().between(-10, -1).betweenPrecision(0, 2) 11`] = `
"-4.9 (c = 128.57142857142856)
..-2.9 (c = 100)
....-2 (c = 0)
....-2.4 (c = 44.44444444444444)
......-2.2 (c = 22.22222222222222)
........-2.1 (c = 11.11111111111111)
......-2.3 (c = 33.33333333333333)
........-2.1 (c = 11.11111111111111)
....-2.6 (c = 66.66666666666666)
......-2.3 (c = 33.33333333333333)
........-2.1 (c = 11.11111111111111)
........-2.2 (c = 22.22222222222222)
......-2.5 (c = 55.55555555555556)
........-2.2 (c = 22.22222222222222)
..........-2.1 (c = 11.11111111111111)
....-2.7 (c = 77.77777777777779)
......-2.3 (c = 33.33333333333333)
........-2.1 (c = 11.11111111111111)
........-2.2 (c = 22.22222222222222)
......-2.5 (c = 55.55555555555556)
........-2.2 (c = 22.22222222222222)
..........-2.1 (c = 11.11111111111111)
....-2.8 (c = 88.88888888888889)
..-3.9 (c = 114.28571428571428)
....-3 (c = 14.285714285714285)
....-3.4 (c = 58.73015873015873)
......-3.2 (c = 36.507936507936506)
........-3.1 (c = 25.396825396825395)
......-3.3 (c = 47.61904761904761)
........-3.1 (c = 25.396825396825395)
....-3.6 (c = 80.95238095238093)
......-3.3 (c = 47.61904761904761)
........-3.1 (c = 25.396825396825395)
........-3.2 (c = 36.507936507936506)
......-3.5 (c = 69.84126984126985)
........-3.2 (c = 36.507936507936506)
..........-3.1 (c = 25.396825396825395)
....-3.7 (c = 92.06349206349208)
......-3.3 (c = 47.61904761904761)
........-3.1 (c = 25.396825396825395)
........-3.2 (c = 36.507936507936506)
......-3.5 (c = 69.84126984126985)
........-3.2 (c = 36.507936507936506)
..........-3.1 (c = 25.396825396825395)
....-3.8 (c = 103.17460317460316)
..-4 (c = 28.57142857142857)
..-4.4 (c = 73.01587301587301)
....-4.2 (c = 50.79365079365079)
......-4.1 (c = 39.682539682539684)
....-4.3 (c = 61.9047619047619)
......-4.1 (c = 39.682539682539684)
..-4.6 (c = 95.23809523809523)
....-4.3 (c = 61.9047619047619)
......-4.1 (c = 39.682539682539684)
......-4.2 (c = 50.79365079365079)
....-4.5 (c = 84.12698412698413)
......-4.2 (c = 50.79365079365079)
........-4.1 (c = 39.682539682539684)
..-4.7 (c = 106.34920634920636)
....-4.3 (c = 61.9047619047619)
......-4.1 (c = 39.682539682539684)
......-4.2 (c = 50.79365079365079)
....-4.5 (c = 84.12698412698413)
......-4.2 (c = 50.79365079365079)
........-4.1 (c = 39.682539682539684)
..-4.8 (c = 117.46031746031746)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(0, 2): 0 1`] = `
"5.8 (c = 138.88888888888889)
..1.8 (c = 88.88888888888889)
....1 (c = 0)
....1.4 (c = 44.44444444444444)
......1.2 (c = 22.22222222222222)
........1.1 (c = 11.11111111111111)
......1.3 (c = 33.33333333333333)
........1.1 (c = 11.11111111111111)
....1.6 (c = 66.66666666666666)
......1.3 (c = 33.33333333333333)
........1.1 (c = 11.11111111111111)
........1.2 (c = 22.22222222222222)
......1.5 (c = 55.55555555555556)
........1.2 (c = 22.22222222222222)
..........1.1 (c = 11.11111111111111)
....1.7 (c = 77.77777777777779)
......1.3 (c = 33.33333333333333)
........1.1 (c = 11.11111111111111)
........1.2 (c = 22.22222222222222)
......1.5 (c = 55.55555555555556)
........1.2 (c = 22.22222222222222)
..........1.1 (c = 11.11111111111111)
..3.8 (c = 113.88888888888889)
....2.8 (c = 101.38888888888889)
......2 (c = 12.5)
......2.4 (c = 56.94444444444444)
........2.2 (c = 34.72222222222222)
..........2.1 (c = 23.61111111111111)
........2.3 (c = 45.83333333333333)
..........2.1 (c = 23.61111111111111)
......2.6 (c = 79.16666666666666)
........2.3 (c = 45.83333333333333)
..........2.1 (c = 23.61111111111111)
..........2.2 (c = 34.72222222222222)
........2.5 (c = 68.05555555555556)
..........2.2 (c = 34.72222222222222)
............2.1 (c = 23.61111111111111)
......2.7 (c = 90.27777777777779)
........2.3 (c = 45.83333333333333)
..........2.1 (c = 23.61111111111111)
..........2.2 (c = 34.72222222222222)
........2.5 (c = 68.05555555555556)
..........2.2 (c = 34.72222222222222)
............2.1 (c = 23.61111111111111)
....3 (c = 25)
....3.4 (c = 69.44444444444444)
......3.2 (c = 47.22222222222222)
........3.1 (c = 36.111111111111114)
......3.3 (c = 58.33333333333333)
........3.1 (c = 36.111111111111114)
....3.6 (c = 91.66666666666666)
......3.3 (c = 58.33333333333333)
........3.1 (c = 36.111111111111114)
........3.2 (c = 47.22222222222222)
......3.5 (c = 80.55555555555556)
........3.2 (c = 47.22222222222222)
..........3.1 (c = 36.111111111111114)
....3.7 (c = 102.77777777777779)
......3.3 (c = 58.33333333333333)
........3.1 (c = 36.111111111111114)
........3.2 (c = 47.22222222222222)
......3.5 (c = 80.55555555555556)
........3.2 (c = 47.22222222222222)
..........3.1 (c = 36.111111111111114)
..4.8 (c = 126.38888888888889)
....2.8 (c = 101.38888888888889)
......2 (c = 12.5)
......2.4 (c = 56.94444444444444)
........2.2 (c = 34.72222222222222)
..........2.1 (c = 23.61111111111111)
........2.3 (c = 45.83333333333333)
..........2.1 (c = 23.61111111111111)
......2.6 (c = 79.16666666666666)
........2.3 (c = 45.83333333333333)
..........2.1 (c = 23.61111111111111)
..........2.2 (c = 34.72222222222222)
........2.5 (c = 68.05555555555556)
..........2.2 (c = 34.72222222222222)
............2.1 (c = 23.61111111111111)
......2.7 (c = 90.27777777777779)
........2.3 (c = 45.83333333333333)
..........2.1 (c = 23.61111111111111)
..........2.2 (c = 34.72222222222222)
........2.5 (c = 68.05555555555556)
..........2.2 (c = 34.72222222222222)
............2.1 (c = 23.61111111111111)
....4 (c = 37.5)
....4.4 (c = 81.94444444444444)
......4.2 (c = 59.72222222222222)
........4.1 (c = 48.611111111111114)
......4.3 (c = 70.83333333333333)
........4.1 (c = 48.611111111111114)
....4.6 (c = 104.16666666666666)
......4.3 (c = 70.83333333333333)
........4.1 (c = 48.611111111111114)
........4.2 (c = 59.72222222222222)
......4.5 (c = 93.05555555555556)
........4.2 (c = 59.72222222222222)
..........4.1 (c = 48.611111111111114)
....4.7 (c = 115.27777777777779)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(0, 2): 1 1`] = `"1 (c = 0)"`;

exports[`Gen.float().between(0, 10).betweenPrecision(0, 2): 2 1`] = `
"4.7 (c = 115.27777777777779)
..1.7 (c = 77.77777777777779)
....1 (c = 0)
....1.3 (c = 33.33333333333333)
......1.1 (c = 11.11111111111111)
......1.2 (c = 22.22222222222222)
....1.5 (c = 55.55555555555556)
......1.2 (c = 22.22222222222222)
........1.1 (c = 11.11111111111111)
......1.4 (c = 44.44444444444444)
....1.6 (c = 66.66666666666666)
......1.4 (c = 44.44444444444444)
........1.2 (c = 22.22222222222222)
..........1.1 (c = 11.11111111111111)
..2.7 (c = 90.27777777777779)
....2 (c = 12.5)
....2.3 (c = 45.83333333333333)
......2.1 (c = 23.61111111111111)
......2.2 (c = 34.72222222222222)
....2.5 (c = 68.05555555555556)
......2.2 (c = 34.72222222222222)
........2.1 (c = 23.61111111111111)
......2.4 (c = 56.94444444444444)
....2.6 (c = 79.16666666666666)
......2.4 (c = 56.94444444444444)
........2.2 (c = 34.72222222222222)
..........2.1 (c = 23.61111111111111)
..3.7 (c = 102.77777777777779)
....3 (c = 25)
....3.3 (c = 58.33333333333333)
......3.1 (c = 36.111111111111114)
......3.2 (c = 47.22222222222222)
....3.5 (c = 80.55555555555556)
......3.2 (c = 47.22222222222222)
........3.1 (c = 36.111111111111114)
......3.4 (c = 69.44444444444444)
....3.6 (c = 91.66666666666666)
......3.4 (c = 69.44444444444444)
........3.2 (c = 47.22222222222222)
..........3.1 (c = 36.111111111111114)
..4 (c = 37.5)
..4.3 (c = 70.83333333333333)
....4.1 (c = 48.611111111111114)
....4.2 (c = 59.72222222222222)
..4.5 (c = 93.05555555555556)
....4.2 (c = 59.72222222222222)
......4.1 (c = 48.611111111111114)
....4.4 (c = 81.94444444444444)
..4.6 (c = 104.16666666666666)
....4.4 (c = 81.94444444444444)
......4.2 (c = 59.72222222222222)
........4.1 (c = 48.611111111111114)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(0, 2): 3 1`] = `
"2.3 (c = 45.83333333333333)
..1.3 (c = 33.33333333333333)
....1 (c = 0)
....1.1 (c = 11.11111111111111)
....1.2 (c = 22.22222222222222)
..2 (c = 12.5)
..2.1 (c = 23.61111111111111)
..2.2 (c = 34.72222222222222)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(0, 2): 4 1`] = `
"1.2 (c = 22.22222222222222)
..1 (c = 0)
..1.1 (c = 11.11111111111111)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(0, 2): 5 1`] = `
"2 (c = 12.5)
..1 (c = 0)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(0, 2): 6 1`] = `"1 (c = 0)"`;

exports[`Gen.float().between(0, 10).betweenPrecision(0, 2): 7 1`] = `
"1.9 (c = 100)
..1 (c = 0)
..1.4 (c = 44.44444444444444)
....1.2 (c = 22.22222222222222)
......1.1 (c = 11.11111111111111)
....1.3 (c = 33.33333333333333)
......1.1 (c = 11.11111111111111)
..1.6 (c = 66.66666666666666)
....1.3 (c = 33.33333333333333)
......1.1 (c = 11.11111111111111)
......1.2 (c = 22.22222222222222)
....1.5 (c = 55.55555555555556)
......1.2 (c = 22.22222222222222)
........1.1 (c = 11.11111111111111)
..1.7 (c = 77.77777777777779)
....1.3 (c = 33.33333333333333)
......1.1 (c = 11.11111111111111)
......1.2 (c = 22.22222222222222)
....1.5 (c = 55.55555555555556)
......1.2 (c = 22.22222222222222)
........1.1 (c = 11.11111111111111)
..1.8 (c = 88.88888888888889)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(0, 2): 8 1`] = `
"4 (c = 37.5)
..1 (c = 0)
..2 (c = 12.5)
..3 (c = 25)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(0, 2): 9 1`] = `
"1.6 (c = 66.66666666666666)
..1 (c = 0)
..1.3 (c = 33.33333333333333)
....1.1 (c = 11.11111111111111)
....1.2 (c = 22.22222222222222)
..1.4 (c = 44.44444444444444)
....1.2 (c = 22.22222222222222)
......1.1 (c = 11.11111111111111)
..1.5 (c = 55.55555555555556)
....1.2 (c = 22.22222222222222)
......1.1 (c = 11.11111111111111)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(0, 2): 10 1`] = `
"3.9 (c = 125)
..1.9 (c = 100)
....1 (c = 0)
....1.4 (c = 44.44444444444444)
......1.2 (c = 22.22222222222222)
........1.1 (c = 11.11111111111111)
......1.3 (c = 33.33333333333333)
........1.1 (c = 11.11111111111111)
....1.6 (c = 66.66666666666666)
......1.3 (c = 33.33333333333333)
........1.1 (c = 11.11111111111111)
........1.2 (c = 22.22222222222222)
......1.5 (c = 55.55555555555556)
........1.2 (c = 22.22222222222222)
..........1.1 (c = 11.11111111111111)
....1.7 (c = 77.77777777777779)
......1.3 (c = 33.33333333333333)
........1.1 (c = 11.11111111111111)
........1.2 (c = 22.22222222222222)
......1.5 (c = 55.55555555555556)
........1.2 (c = 22.22222222222222)
..........1.1 (c = 11.11111111111111)
....1.8 (c = 88.88888888888889)
..2.9 (c = 112.5)
....2 (c = 12.5)
....2.4 (c = 56.94444444444444)
......2.2 (c = 34.72222222222222)
........2.1 (c = 23.61111111111111)
......2.3 (c = 45.83333333333333)
........2.1 (c = 23.61111111111111)
....2.6 (c = 79.16666666666666)
......2.3 (c = 45.83333333333333)
........2.1 (c = 23.61111111111111)
........2.2 (c = 34.72222222222222)
......2.5 (c = 68.05555555555556)
........2.2 (c = 34.72222222222222)
..........2.1 (c = 23.61111111111111)
....2.7 (c = 90.27777777777779)
......2.3 (c = 45.83333333333333)
........2.1 (c = 23.61111111111111)
........2.2 (c = 34.72222222222222)
......2.5 (c = 68.05555555555556)
........2.2 (c = 34.72222222222222)
..........2.1 (c = 23.61111111111111)
....2.8 (c = 101.38888888888889)
..3 (c = 25)
..3.4 (c = 69.44444444444444)
....3.2 (c = 47.22222222222222)
......3.1 (c = 36.111111111111114)
....3.3 (c = 58.33333333333333)
......3.1 (c = 36.111111111111114)
..3.6 (c = 91.66666666666666)
....3.3 (c = 58.33333333333333)
......3.1 (c = 36.111111111111114)
......3.2 (c = 47.22222222222222)
....3.5 (c = 80.55555555555556)
......3.2 (c = 47.22222222222222)
........3.1 (c = 36.111111111111114)
..3.7 (c = 102.77777777777779)
....3.3 (c = 58.33333333333333)
......3.1 (c = 36.111111111111114)
......3.2 (c = 47.22222222222222)
....3.5 (c = 80.55555555555556)
......3.2 (c = 47.22222222222222)
........3.1 (c = 36.111111111111114)
..3.8 (c = 113.88888888888889)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(1, 2): 0 1`] = `
"5.88 (c = 138.88888888888889)
..1.88 (c = 88.88888888888889)
....1.44 (c = 44.44444444444444)
......1.22 (c = 22.22222222222222)
........1.11 (c = 11.11111111111111)
..........1.05 (c = 5.05050505050505)
............1.02 (c = 2.0202020202020203)
..............1.01 (c = 1.0101010101010102)
............1.03 (c = 3.0303030303030303)
..............1.01 (c = 1.0101010101010102)
............1.04 (c = 4.040404040404041)
..........1.08 (c = 8.080808080808081)
............1.04 (c = 4.040404040404041)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
............1.06 (c = 6.0606060606060606)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
................1.02 (c = 2.0202020202020203)
............1.07 (c = 7.07070707070707)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
................1.02 (c = 2.0202020202020203)
..........1.09 (c = 9.090909090909092)
............1.04 (c = 4.040404040404041)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
............1.06 (c = 6.0606060606060606)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
................1.02 (c = 2.0202020202020203)
............1.07 (c = 7.07070707070707)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
................1.02 (c = 2.0202020202020203)
..........1.1 (c = 10.1010101010101)
............1.07 (c = 7.07070707070707)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
................1.02 (c = 2.0202020202020203)
..............1.06 (c = 6.0606060606060606)
................1.04 (c = 4.040404040404041)
..................1.02 (c = 2.0202020202020203)
....................1.01 (c = 1.0101010101010102)
........1.16 (c = 16.161616161616163)
..........1.08 (c = 8.080808080808081)
............1.04 (c = 4.040404040404041)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
............1.06 (c = 6.0606060606060606)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
................1.02 (c = 2.0202020202020203)
..............1.05 (c = 5.05050505050505)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
............1.07 (c = 7.07070707070707)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
................1.02 (c = 2.0202020202020203)
..............1.05 (c = 5.05050505050505)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
..........1.12 (c = 12.121212121212121)
............1.06 (c = 6.0606060606060606)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
................1.02 (c = 2.0202020202020203)
..............1.04 (c = 4.040404040404041)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
..............1.05 (c = 5.05050505050505)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
............1.09 (c = 9.090909090909092)
..............1.04 (c = 4.040404040404041)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
................1.03 (c = 3.0303030303030303)
..................1.01 (c = 1.0101010101010102)
..............1.07 (c = 7.07070707070707)
................1.03 (c = 3.0303030303030303)
..................1.01 (c = 1.0101010101010102)
..................1.02 (c = 2.0202020202020203)
................1.05 (c = 5.05050505050505)
..................1.02 (c = 2.0202020202020203)
....................1.01 (c = 1.0101010101010102)
............1.1 (c = 10.1010101010101)
..............1.05 (c = 5.05050505050505)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
................1.03 (c = 3.0303030303030303)
..................1.01 (c = 1.0101010101010102)
................1.04 (c = 4.040404040404041)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(1, 2): 1 1`] = `
"1.5 (c = 55.55555555555556)
..1.2 (c = 22.22222222222222)
....1.1 (c = 11.11111111111111)
..1.3 (c = 33.33333333333333)
....1.1 (c = 11.11111111111111)
..1.4 (c = 44.44444444444444)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(1, 2): 2 1`] = `
"4.87 (c = 125.37878787878788)
..1.87 (c = 87.87878787878788)
....1.43 (c = 43.43434343434344)
......1.21 (c = 21.21212121212121)
........1.1 (c = 10.1010101010101)
..........1.05 (c = 5.05050505050505)
............1.02 (c = 2.0202020202020203)
..............1.01 (c = 1.0101010101010102)
............1.03 (c = 3.0303030303030303)
..............1.01 (c = 1.0101010101010102)
............1.04 (c = 4.040404040404041)
..........1.07 (c = 7.07070707070707)
............1.03 (c = 3.0303030303030303)
..............1.01 (c = 1.0101010101010102)
..............1.02 (c = 2.0202020202020203)
............1.06 (c = 6.0606060606060606)
..............1.04 (c = 4.040404040404041)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
..........1.08 (c = 8.080808080808081)
............1.04 (c = 4.040404040404041)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
............1.06 (c = 6.0606060606060606)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
................1.02 (c = 2.0202020202020203)
..........1.09 (c = 9.090909090909092)
............1.04 (c = 4.040404040404041)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
............1.06 (c = 6.0606060606060606)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
................1.02 (c = 2.0202020202020203)
........1.15 (c = 15.151515151515152)
..........1.07 (c = 7.07070707070707)
............1.03 (c = 3.0303030303030303)
..............1.01 (c = 1.0101010101010102)
..............1.02 (c = 2.0202020202020203)
............1.05 (c = 5.05050505050505)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
..............1.04 (c = 4.040404040404041)
............1.06 (c = 6.0606060606060606)
..............1.04 (c = 4.040404040404041)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
..........1.11 (c = 11.11111111111111)
............1.05 (c = 5.05050505050505)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
..............1.04 (c = 4.040404040404041)
............1.08 (c = 8.080808080808081)
..............1.04 (c = 4.040404040404041)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
................1.03 (c = 3.0303030303030303)
..................1.01 (c = 1.0101010101010102)
..............1.06 (c = 6.0606060606060606)
................1.03 (c = 3.0303030303030303)
..................1.01 (c = 1.0101010101010102)
..................1.02 (c = 2.0202020202020203)
............1.09 (c = 9.090909090909092)
..............1.04 (c = 4.040404040404041)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
................1.03 (c = 3.0303030303030303)
..................1.01 (c = 1.0101010101010102)
..............1.06 (c = 6.0606060606060606)
................1.03 (c = 3.0303030303030303)
..................1.01 (c = 1.0101010101010102)
..................1.02 (c = 2.0202020202020203)
..........1.13 (c = 13.131313131313133)
............1.06 (c = 6.0606060606060606)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
................1.02 (c = 2.0202020202020203)
..............1.04 (c = 4.040404040404041)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
..............1.05 (c = 5.05050505050505)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
............1.09 (c = 9.090909090909092)
..............1.04 (c = 4.040404040404041)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
................1.03 (c = 3.0303030303030303)
..................1.01 (c = 1.0101010101010102)
..............1.08 (c = 8.080808080808081)
............1.12 (c = 12.121212121212121)
..........1.1400000000000001 (c = 14.14141414141414)
............1.12 (c = 12.121212121212121)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(1, 2): 3 1`] = `
"2.63 (c = 76.13636363636363)
..1.63 (c = 63.63636363636363)
....1.31 (c = 31.313131313131315)
......1.15 (c = 15.151515151515152)
........1.07 (c = 7.07070707070707)
..........1.03 (c = 3.0303030303030303)
............1.01 (c = 1.0101010101010102)
............1.02 (c = 2.0202020202020203)
..........1.05 (c = 5.05050505050505)
............1.02 (c = 2.0202020202020203)
..............1.01 (c = 1.0101010101010102)
............1.04 (c = 4.040404040404041)
..........1.06 (c = 6.0606060606060606)
............1.04 (c = 4.040404040404041)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
........1.11 (c = 11.11111111111111)
..........1.05 (c = 5.05050505050505)
............1.02 (c = 2.0202020202020203)
..............1.01 (c = 1.0101010101010102)
............1.03 (c = 3.0303030303030303)
..............1.01 (c = 1.0101010101010102)
............1.04 (c = 4.040404040404041)
..........1.08 (c = 8.080808080808081)
............1.04 (c = 4.040404040404041)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
............1.06 (c = 6.0606060606060606)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
................1.02 (c = 2.0202020202020203)
..........1.09 (c = 9.090909090909092)
............1.04 (c = 4.040404040404041)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
............1.06 (c = 6.0606060606060606)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
................1.02 (c = 2.0202020202020203)
..........1.1 (c = 10.1010101010101)
........1.13 (c = 13.131313131313133)
..........1.06 (c = 6.0606060606060606)
............1.03 (c = 3.0303030303030303)
..............1.01 (c = 1.0101010101010102)
..............1.02 (c = 2.0202020202020203)
............1.04 (c = 4.040404040404041)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
............1.05 (c = 5.05050505050505)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
..........1.09 (c = 9.090909090909092)
............1.04 (c = 4.040404040404041)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
............1.08 (c = 8.080808080808081)
..........1.12 (c = 12.121212121212121)
............1.1 (c = 10.1010101010101)
..............1.05 (c = 5.05050505050505)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
................1.03 (c = 3.0303030303030303)
..................1.01 (c = 1.0101010101010102)
................1.04 (c = 4.040404040404041)
..............1.08 (c = 8.080808080808081)
................1.04 (c = 4.040404040404041)
..................1.02 (c = 2.0202020202020203)
....................1.01 (c = 1.0101010101010102)
..................1.03 (c = 3.0303030303030303)
....................1.01 (c = 1.0101010101010102)
........1.1400000000000001 (c = 14.14141414141414)
..........1.1 (c = 10.1010101010101)
............1.05 (c = 5.05050505050505)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
..............1.04 (c = 4.040404040404041)
............1.08 (c = 8.080808080808081)
..............1.04 (c = 4.040404040404041)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
................1.03 (c = 3.0303030303030303)
..................1.01 (c = 1.0101010101010102)
..............1.06 (c = 6.0606060606060606)
................1.03 (c = 3.0303030303030303)
..................1.01 (c = 1.0101010101010102)
..................1.02 (c = 2.0202020202020203)
............1.09 (c = 9.090909090909092)
..............1.04 (c = 4.040404040404041)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
................1.03 (c = 3.0303030303030303)
..................1.01 (c = 1.0101010101010102)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(1, 2): 4 1`] = `
"1.92 (c = 92.92929292929293)
..1.46 (c = 46.464646464646464)
....1.23 (c = 23.232323232323232)
......1.11 (c = 11.11111111111111)
........1.05 (c = 5.05050505050505)
..........1.02 (c = 2.0202020202020203)
............1.01 (c = 1.0101010101010102)
..........1.03 (c = 3.0303030303030303)
............1.01 (c = 1.0101010101010102)
..........1.04 (c = 4.040404040404041)
........1.08 (c = 8.080808080808081)
..........1.04 (c = 4.040404040404041)
............1.02 (c = 2.0202020202020203)
..............1.01 (c = 1.0101010101010102)
............1.03 (c = 3.0303030303030303)
..............1.01 (c = 1.0101010101010102)
..........1.06 (c = 6.0606060606060606)
............1.03 (c = 3.0303030303030303)
..............1.01 (c = 1.0101010101010102)
..............1.02 (c = 2.0202020202020203)
..........1.07 (c = 7.07070707070707)
............1.03 (c = 3.0303030303030303)
..............1.01 (c = 1.0101010101010102)
..............1.02 (c = 2.0202020202020203)
........1.09 (c = 9.090909090909092)
..........1.04 (c = 4.040404040404041)
............1.02 (c = 2.0202020202020203)
..............1.01 (c = 1.0101010101010102)
............1.03 (c = 3.0303030303030303)
..............1.01 (c = 1.0101010101010102)
..........1.06 (c = 6.0606060606060606)
............1.03 (c = 3.0303030303030303)
..............1.01 (c = 1.0101010101010102)
..............1.02 (c = 2.0202020202020203)
..........1.07 (c = 7.07070707070707)
............1.03 (c = 3.0303030303030303)
..............1.01 (c = 1.0101010101010102)
..............1.02 (c = 2.0202020202020203)
........1.1 (c = 10.1010101010101)
..........1.07 (c = 7.07070707070707)
............1.03 (c = 3.0303030303030303)
..............1.01 (c = 1.0101010101010102)
..............1.02 (c = 2.0202020202020203)
............1.06 (c = 6.0606060606060606)
..............1.04 (c = 4.040404040404041)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
......1.17 (c = 17.17171717171717)
........1.08 (c = 8.080808080808081)
..........1.04 (c = 4.040404040404041)
............1.02 (c = 2.0202020202020203)
..............1.01 (c = 1.0101010101010102)
............1.03 (c = 3.0303030303030303)
..............1.01 (c = 1.0101010101010102)
..........1.06 (c = 6.0606060606060606)
............1.03 (c = 3.0303030303030303)
..............1.01 (c = 1.0101010101010102)
..............1.02 (c = 2.0202020202020203)
............1.05 (c = 5.05050505050505)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
..........1.07 (c = 7.07070707070707)
............1.03 (c = 3.0303030303030303)
..............1.01 (c = 1.0101010101010102)
..............1.02 (c = 2.0202020202020203)
............1.05 (c = 5.05050505050505)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
........1.12 (c = 12.121212121212121)
..........1.06 (c = 6.0606060606060606)
............1.03 (c = 3.0303030303030303)
..............1.01 (c = 1.0101010101010102)
..............1.02 (c = 2.0202020202020203)
............1.04 (c = 4.040404040404041)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
............1.05 (c = 5.05050505050505)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
..........1.09 (c = 9.090909090909092)
............1.04 (c = 4.040404040404041)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
............1.07 (c = 7.07070707070707)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
................1.02 (c = 2.0202020202020203)
..............1.05 (c = 5.05050505050505)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
..........1.1 (c = 10.1010101010101)
............1.05 (c = 5.05050505050505)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
..............1.04 (c = 4.040404040404041)
............1.07 (c = 7.07070707070707)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(1, 2): 5 1`] = `
"2.6 (c = 79.16666666666666)
..1.6 (c = 66.66666666666666)
....1.3 (c = 33.33333333333333)
......1.1 (c = 11.11111111111111)
......1.2 (c = 22.22222222222222)
....1.4 (c = 44.44444444444444)
......1.2 (c = 22.22222222222222)
........1.1 (c = 11.11111111111111)
....1.5 (c = 55.55555555555556)
......1.2 (c = 22.22222222222222)
........1.1 (c = 11.11111111111111)
..2.3 (c = 45.83333333333333)
....2.1 (c = 23.61111111111111)
....2.2 (c = 34.72222222222222)
..2.4 (c = 56.94444444444444)
....2.2 (c = 34.72222222222222)
......2.1 (c = 23.61111111111111)
..2.5 (c = 68.05555555555556)
....2.2 (c = 34.72222222222222)
......2.1 (c = 23.61111111111111)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(1, 2): 6 1`] = `
"1.9 (c = 100)
..1.4 (c = 44.44444444444444)
....1.2 (c = 22.22222222222222)
......1.1 (c = 11.11111111111111)
....1.3 (c = 33.33333333333333)
......1.1 (c = 11.11111111111111)
..1.6 (c = 66.66666666666666)
....1.3 (c = 33.33333333333333)
......1.1 (c = 11.11111111111111)
......1.2 (c = 22.22222222222222)
....1.5 (c = 55.55555555555556)
......1.2 (c = 22.22222222222222)
........1.1 (c = 11.11111111111111)
..1.7 (c = 77.77777777777779)
....1.3 (c = 33.33333333333333)
......1.1 (c = 11.11111111111111)
......1.2 (c = 22.22222222222222)
....1.5 (c = 55.55555555555556)
......1.2 (c = 22.22222222222222)
........1.1 (c = 11.11111111111111)
..1.8 (c = 88.88888888888889)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(1, 2): 7 1`] = `
"1.19 (c = 19.19191919191919)
..1.09 (c = 9.090909090909092)
....1.04 (c = 4.040404040404041)
......1.02 (c = 2.0202020202020203)
........1.01 (c = 1.0101010101010102)
......1.03 (c = 3.0303030303030303)
........1.01 (c = 1.0101010101010102)
....1.06 (c = 6.0606060606060606)
......1.03 (c = 3.0303030303030303)
........1.01 (c = 1.0101010101010102)
........1.02 (c = 2.0202020202020203)
......1.05 (c = 5.05050505050505)
........1.02 (c = 2.0202020202020203)
..........1.01 (c = 1.0101010101010102)
....1.07 (c = 7.07070707070707)
......1.03 (c = 3.0303030303030303)
........1.01 (c = 1.0101010101010102)
........1.02 (c = 2.0202020202020203)
......1.05 (c = 5.05050505050505)
........1.02 (c = 2.0202020202020203)
..........1.01 (c = 1.0101010101010102)
....1.08 (c = 8.080808080808081)
..1.1400000000000001 (c = 14.14141414141414)
....1.07 (c = 7.07070707070707)
......1.03 (c = 3.0303030303030303)
........1.01 (c = 1.0101010101010102)
........1.02 (c = 2.0202020202020203)
......1.05 (c = 5.05050505050505)
........1.02 (c = 2.0202020202020203)
..........1.01 (c = 1.0101010101010102)
........1.04 (c = 4.040404040404041)
......1.06 (c = 6.0606060606060606)
........1.04 (c = 4.040404040404041)
..........1.02 (c = 2.0202020202020203)
............1.01 (c = 1.0101010101010102)
....1.1 (c = 10.1010101010101)
......1.05 (c = 5.05050505050505)
........1.02 (c = 2.0202020202020203)
..........1.01 (c = 1.0101010101010102)
........1.03 (c = 3.0303030303030303)
..........1.01 (c = 1.0101010101010102)
........1.04 (c = 4.040404040404041)
......1.08 (c = 8.080808080808081)
........1.04 (c = 4.040404040404041)
..........1.02 (c = 2.0202020202020203)
............1.01 (c = 1.0101010101010102)
..........1.03 (c = 3.0303030303030303)
............1.01 (c = 1.0101010101010102)
........1.06 (c = 6.0606060606060606)
..........1.03 (c = 3.0303030303030303)
............1.01 (c = 1.0101010101010102)
............1.02 (c = 2.0202020202020203)
....1.12 (c = 12.121212121212121)
......1.06 (c = 6.0606060606060606)
........1.03 (c = 3.0303030303030303)
..........1.01 (c = 1.0101010101010102)
..........1.02 (c = 2.0202020202020203)
........1.04 (c = 4.040404040404041)
..........1.02 (c = 2.0202020202020203)
............1.01 (c = 1.0101010101010102)
........1.05 (c = 5.05050505050505)
..........1.02 (c = 2.0202020202020203)
............1.01 (c = 1.0101010101010102)
......1.11 (c = 11.11111111111111)
........1.05 (c = 5.05050505050505)
..........1.02 (c = 2.0202020202020203)
............1.01 (c = 1.0101010101010102)
..........1.03 (c = 3.0303030303030303)
............1.01 (c = 1.0101010101010102)
..........1.04 (c = 4.040404040404041)
........1.08 (c = 8.080808080808081)
..........1.04 (c = 4.040404040404041)
............1.02 (c = 2.0202020202020203)
..............1.01 (c = 1.0101010101010102)
............1.03 (c = 3.0303030303030303)
..............1.01 (c = 1.0101010101010102)
....1.13 (c = 13.131313131313133)
......1.06 (c = 6.0606060606060606)
........1.03 (c = 3.0303030303030303)
..........1.01 (c = 1.0101010101010102)
..........1.02 (c = 2.0202020202020203)
........1.04 (c = 4.040404040404041)
..........1.02 (c = 2.0202020202020203)
............1.01 (c = 1.0101010101010102)
........1.05 (c = 5.05050505050505)
..........1.02 (c = 2.0202020202020203)
............1.01 (c = 1.0101010101010102)
......1.11 (c = 11.11111111111111)
........1.05 (c = 5.05050505050505)
..........1.02 (c = 2.0202020202020203)
............1.01 (c = 1.0101010101010102)
..........1.03 (c = 3.0303030303030303)
............1.01 (c = 1.0101010101010102)
..........1.04 (c = 4.040404040404041)
........1.08 (c = 8.080808080808081)
..........1.04 (c = 4.040404040404041)
............1.02 (c = 2.0202020202020203)
..............1.01 (c = 1.0101010101010102)
............1.03 (c = 3.0303030303030303)
..............1.01 (c = 1.0101010101010102)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(1, 2): 8 1`] = `
"4.5 (c = 93.05555555555556)
..1.5 (c = 55.55555555555556)
....1.2 (c = 22.22222222222222)
......1.1 (c = 11.11111111111111)
....1.3 (c = 33.33333333333333)
......1.1 (c = 11.11111111111111)
....1.4 (c = 44.44444444444444)
..2.5 (c = 68.05555555555556)
....2.2 (c = 34.72222222222222)
......2.1 (c = 23.61111111111111)
....2.3 (c = 45.83333333333333)
......2.1 (c = 23.61111111111111)
....2.4 (c = 56.94444444444444)
..3.5 (c = 80.55555555555556)
....3.2 (c = 47.22222222222222)
......3.1 (c = 36.111111111111114)
....3.3 (c = 58.33333333333333)
......3.1 (c = 36.111111111111114)
....3.4 (c = 69.44444444444444)
..4.2 (c = 59.72222222222222)
....4.1 (c = 48.611111111111114)
..4.3 (c = 70.83333333333333)
....4.1 (c = 48.611111111111114)
..4.4 (c = 81.94444444444444)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(1, 2): 9 1`] = `
"1.26 (c = 26.262626262626267)
..1.13 (c = 13.131313131313133)
....1.06 (c = 6.0606060606060606)
......1.03 (c = 3.0303030303030303)
........1.01 (c = 1.0101010101010102)
........1.02 (c = 2.0202020202020203)
......1.04 (c = 4.040404040404041)
........1.02 (c = 2.0202020202020203)
..........1.01 (c = 1.0101010101010102)
......1.05 (c = 5.05050505050505)
........1.02 (c = 2.0202020202020203)
..........1.01 (c = 1.0101010101010102)
....1.09 (c = 9.090909090909092)
......1.04 (c = 4.040404040404041)
........1.02 (c = 2.0202020202020203)
..........1.01 (c = 1.0101010101010102)
........1.03 (c = 3.0303030303030303)
..........1.01 (c = 1.0101010101010102)
......1.07 (c = 7.07070707070707)
........1.03 (c = 3.0303030303030303)
..........1.01 (c = 1.0101010101010102)
..........1.02 (c = 2.0202020202020203)
........1.05 (c = 5.05050505050505)
..........1.02 (c = 2.0202020202020203)
............1.01 (c = 1.0101010101010102)
......1.08 (c = 8.080808080808081)
....1.11 (c = 11.11111111111111)
......1.05 (c = 5.05050505050505)
........1.02 (c = 2.0202020202020203)
..........1.01 (c = 1.0101010101010102)
........1.03 (c = 3.0303030303030303)
..........1.01 (c = 1.0101010101010102)
........1.04 (c = 4.040404040404041)
......1.08 (c = 8.080808080808081)
........1.04 (c = 4.040404040404041)
..........1.02 (c = 2.0202020202020203)
............1.01 (c = 1.0101010101010102)
..........1.03 (c = 3.0303030303030303)
............1.01 (c = 1.0101010101010102)
........1.07 (c = 7.07070707070707)
..........1.03 (c = 3.0303030303030303)
............1.01 (c = 1.0101010101010102)
............1.02 (c = 2.0202020202020203)
......1.1 (c = 10.1010101010101)
........1.07 (c = 7.07070707070707)
..........1.03 (c = 3.0303030303030303)
............1.01 (c = 1.0101010101010102)
............1.02 (c = 2.0202020202020203)
....1.12 (c = 12.121212121212121)
......1.1 (c = 10.1010101010101)
........1.05 (c = 5.05050505050505)
..........1.02 (c = 2.0202020202020203)
............1.01 (c = 1.0101010101010102)
..........1.03 (c = 3.0303030303030303)
............1.01 (c = 1.0101010101010102)
..........1.04 (c = 4.040404040404041)
........1.07 (c = 7.07070707070707)
..........1.03 (c = 3.0303030303030303)
............1.01 (c = 1.0101010101010102)
............1.02 (c = 2.0202020202020203)
........1.08 (c = 8.080808080808081)
..........1.04 (c = 4.040404040404041)
............1.02 (c = 2.0202020202020203)
..............1.01 (c = 1.0101010101010102)
............1.03 (c = 3.0303030303030303)
..............1.01 (c = 1.0101010101010102)
..1.19 (c = 19.19191919191919)
....1.09 (c = 9.090909090909092)
......1.04 (c = 4.040404040404041)
........1.02 (c = 2.0202020202020203)
..........1.01 (c = 1.0101010101010102)
........1.03 (c = 3.0303030303030303)
..........1.01 (c = 1.0101010101010102)
......1.06 (c = 6.0606060606060606)
........1.03 (c = 3.0303030303030303)
..........1.01 (c = 1.0101010101010102)
..........1.02 (c = 2.0202020202020203)
........1.05 (c = 5.05050505050505)
..........1.02 (c = 2.0202020202020203)
............1.01 (c = 1.0101010101010102)
......1.07 (c = 7.07070707070707)
........1.03 (c = 3.0303030303030303)
..........1.01 (c = 1.0101010101010102)
..........1.02 (c = 2.0202020202020203)
........1.05 (c = 5.05050505050505)
..........1.02 (c = 2.0202020202020203)
............1.01 (c = 1.0101010101010102)
......1.08 (c = 8.080808080808081)
....1.1400000000000001 (c = 14.14141414141414)
......1.07 (c = 7.07070707070707)
........1.03 (c = 3.0303030303030303)
..........1.01 (c = 1.0101010101010102)
..........1.02 (c = 2.0202020202020203)
........1.05 (c = 5.05050505050505)
..........1.02 (c = 2.0202020202020203)
............1.01 (c = 1.0101010101010102)
..........1.04 (c = 4.040404040404041)
........1.06 (c = 6.0606060606060606)
..........1.04 (c = 4.040404040404041)
............1.02 (c = 2.0202020202020203)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(1, 2): 10 1`] = `
"3.99 (c = 125)
..1.99 (c = 100)
....1.49 (c = 49.494949494949495)
......1.24 (c = 24.242424242424242)
........1.12 (c = 12.121212121212121)
..........1.06 (c = 6.0606060606060606)
............1.03 (c = 3.0303030303030303)
..............1.01 (c = 1.0101010101010102)
..............1.02 (c = 2.0202020202020203)
............1.04 (c = 4.040404040404041)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
............1.05 (c = 5.05050505050505)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
..........1.09 (c = 9.090909090909092)
............1.04 (c = 4.040404040404041)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
............1.07 (c = 7.07070707070707)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
................1.02 (c = 2.0202020202020203)
..............1.05 (c = 5.05050505050505)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
............1.08 (c = 8.080808080808081)
..........1.1 (c = 10.1010101010101)
............1.05 (c = 5.05050505050505)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
..............1.04 (c = 4.040404040404041)
............1.07 (c = 7.07070707070707)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
................1.02 (c = 2.0202020202020203)
............1.08 (c = 8.080808080808081)
..............1.04 (c = 4.040404040404041)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
................1.03 (c = 3.0303030303030303)
..................1.01 (c = 1.0101010101010102)
..........1.11 (c = 11.11111111111111)
............1.05 (c = 5.05050505050505)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
..............1.04 (c = 4.040404040404041)
............1.08 (c = 8.080808080808081)
..............1.04 (c = 4.040404040404041)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
................1.03 (c = 3.0303030303030303)
..................1.01 (c = 1.0101010101010102)
..............1.07 (c = 7.07070707070707)
................1.03 (c = 3.0303030303030303)
..................1.01 (c = 1.0101010101010102)
..................1.02 (c = 2.0202020202020203)
........1.18 (c = 18.181818181818183)
..........1.09 (c = 9.090909090909092)
............1.04 (c = 4.040404040404041)
..............1.02 (c = 2.0202020202020203)
................1.01 (c = 1.0101010101010102)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
............1.06 (c = 6.0606060606060606)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
................1.02 (c = 2.0202020202020203)
..............1.05 (c = 5.05050505050505)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
............1.07 (c = 7.07070707070707)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
................1.02 (c = 2.0202020202020203)
..............1.05 (c = 5.05050505050505)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
............1.08 (c = 8.080808080808081)
..........1.13 (c = 13.131313131313133)
............1.06 (c = 6.0606060606060606)
..............1.03 (c = 3.0303030303030303)
................1.01 (c = 1.0101010101010102)
................1.02 (c = 2.0202020202020203)
..............1.04 (c = 4.040404040404041)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
..............1.05 (c = 5.05050505050505)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)
............1.11 (c = 11.11111111111111)
..............1.05 (c = 5.05050505050505)
................1.02 (c = 2.0202020202020203)
..................1.01 (c = 1.0101010101010102)"
`;

exports[`Gen.float().between(1, 10).betweenPrecision(0, 2) 1`] = `
"6.8 (c = 146.03174603174602)
..2.8 (c = 88.88888888888889)
....2 (c = 0)
....2.4 (c = 44.44444444444444)
......2.2 (c = 22.22222222222222)
........2.1 (c = 11.11111111111111)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
....2.6 (c = 66.66666666666666)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
........2.2 (c = 22.22222222222222)
......2.5 (c = 55.55555555555556)
........2.2 (c = 22.22222222222222)
..........2.1 (c = 11.11111111111111)
....2.7 (c = 77.77777777777779)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
........2.2 (c = 22.22222222222222)
......2.5 (c = 55.55555555555556)
........2.2 (c = 22.22222222222222)
..........2.1 (c = 11.11111111111111)
..4.8 (c = 117.46031746031746)
....3.8 (c = 103.17460317460316)
......3 (c = 14.285714285714285)
......3.4 (c = 58.73015873015873)
........3.2 (c = 36.507936507936506)
..........3.1 (c = 25.396825396825395)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
......3.6 (c = 80.95238095238093)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
......3.7 (c = 92.06349206349208)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
....4 (c = 28.57142857142857)
....4.4 (c = 73.01587301587301)
......4.2 (c = 50.79365079365079)
........4.1 (c = 39.682539682539684)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
....4.6 (c = 95.23809523809523)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
........4.2 (c = 50.79365079365079)
......4.5 (c = 84.12698412698413)
........4.2 (c = 50.79365079365079)
..........4.1 (c = 39.682539682539684)
....4.7 (c = 106.34920634920636)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
........4.2 (c = 50.79365079365079)
......4.5 (c = 84.12698412698413)
........4.2 (c = 50.79365079365079)
..........4.1 (c = 39.682539682539684)
..5.8 (c = 131.74603174603175)
....3.8 (c = 103.17460317460316)
......3 (c = 14.285714285714285)
......3.4 (c = 58.73015873015873)
........3.2 (c = 36.507936507936506)
..........3.1 (c = 25.396825396825395)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
......3.6 (c = 80.95238095238093)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
......3.7 (c = 92.06349206349208)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
....5 (c = 42.857142857142854)
....5.4 (c = 87.30158730158729)
......5.2 (c = 65.07936507936508)
........5.1 (c = 53.96825396825396)
......5.3 (c = 76.19047619047618)
........5.1 (c = 53.96825396825396)
....5.6 (c = 109.52380952380952)
......5.3 (c = 76.19047619047618)
........5.1 (c = 53.96825396825396)
........5.2 (c = 65.07936507936508)
......5.5 (c = 98.4126984126984)
........5.2 (c = 65.07936507936508)
..........5.1 (c = 53.96825396825396)
....5.7 (c = 120.63492063492063)"
`;

exports[`Gen.float().between(1, 10).betweenPrecision(0, 2) 2`] = `
"6.8 (c = 146.03174603174602)
..2.8 (c = 88.88888888888889)
....2 (c = 0)
....2.4 (c = 44.44444444444444)
......2.2 (c = 22.22222222222222)
........2.1 (c = 11.11111111111111)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
....2.6 (c = 66.66666666666666)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
........2.2 (c = 22.22222222222222)
......2.5 (c = 55.55555555555556)
........2.2 (c = 22.22222222222222)
..........2.1 (c = 11.11111111111111)
....2.7 (c = 77.77777777777779)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
........2.2 (c = 22.22222222222222)
......2.5 (c = 55.55555555555556)
........2.2 (c = 22.22222222222222)
..........2.1 (c = 11.11111111111111)
..4.8 (c = 117.46031746031746)
....3.8 (c = 103.17460317460316)
......3 (c = 14.285714285714285)
......3.4 (c = 58.73015873015873)
........3.2 (c = 36.507936507936506)
..........3.1 (c = 25.396825396825395)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
......3.6 (c = 80.95238095238093)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
......3.7 (c = 92.06349206349208)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
....4 (c = 28.57142857142857)
....4.4 (c = 73.01587301587301)
......4.2 (c = 50.79365079365079)
........4.1 (c = 39.682539682539684)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
....4.6 (c = 95.23809523809523)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
........4.2 (c = 50.79365079365079)
......4.5 (c = 84.12698412698413)
........4.2 (c = 50.79365079365079)
..........4.1 (c = 39.682539682539684)
....4.7 (c = 106.34920634920636)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
........4.2 (c = 50.79365079365079)
......4.5 (c = 84.12698412698413)
........4.2 (c = 50.79365079365079)
..........4.1 (c = 39.682539682539684)
..5.8 (c = 131.74603174603175)
....3.8 (c = 103.17460317460316)
......3 (c = 14.285714285714285)
......3.4 (c = 58.73015873015873)
........3.2 (c = 36.507936507936506)
..........3.1 (c = 25.396825396825395)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
......3.6 (c = 80.95238095238093)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
......3.7 (c = 92.06349206349208)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
....5 (c = 42.857142857142854)
....5.4 (c = 87.30158730158729)
......5.2 (c = 65.07936507936508)
........5.1 (c = 53.96825396825396)
......5.3 (c = 76.19047619047618)
........5.1 (c = 53.96825396825396)
....5.6 (c = 109.52380952380952)
......5.3 (c = 76.19047619047618)
........5.1 (c = 53.96825396825396)
........5.2 (c = 65.07936507936508)
......5.5 (c = 98.4126984126984)
........5.2 (c = 65.07936507936508)
..........5.1 (c = 53.96825396825396)
....5.7 (c = 120.63492063492063)"
`;

exports[`Gen.float().between(1, 10).betweenPrecision(0, 2) 3`] = `
"6.8 (c = 146.03174603174602)
..2.8 (c = 88.88888888888889)
....2 (c = 0)
....2.4 (c = 44.44444444444444)
......2.2 (c = 22.22222222222222)
........2.1 (c = 11.11111111111111)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
....2.6 (c = 66.66666666666666)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
........2.2 (c = 22.22222222222222)
......2.5 (c = 55.55555555555556)
........2.2 (c = 22.22222222222222)
..........2.1 (c = 11.11111111111111)
....2.7 (c = 77.77777777777779)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
........2.2 (c = 22.22222222222222)
......2.5 (c = 55.55555555555556)
........2.2 (c = 22.22222222222222)
..........2.1 (c = 11.11111111111111)
..4.8 (c = 117.46031746031746)
....3.8 (c = 103.17460317460316)
......3 (c = 14.285714285714285)
......3.4 (c = 58.73015873015873)
........3.2 (c = 36.507936507936506)
..........3.1 (c = 25.396825396825395)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
......3.6 (c = 80.95238095238093)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
......3.7 (c = 92.06349206349208)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
....4 (c = 28.57142857142857)
....4.4 (c = 73.01587301587301)
......4.2 (c = 50.79365079365079)
........4.1 (c = 39.682539682539684)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
....4.6 (c = 95.23809523809523)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
........4.2 (c = 50.79365079365079)
......4.5 (c = 84.12698412698413)
........4.2 (c = 50.79365079365079)
..........4.1 (c = 39.682539682539684)
....4.7 (c = 106.34920634920636)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
........4.2 (c = 50.79365079365079)
......4.5 (c = 84.12698412698413)
........4.2 (c = 50.79365079365079)
..........4.1 (c = 39.682539682539684)
..5.8 (c = 131.74603174603175)
....3.8 (c = 103.17460317460316)
......3 (c = 14.285714285714285)
......3.4 (c = 58.73015873015873)
........3.2 (c = 36.507936507936506)
..........3.1 (c = 25.396825396825395)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
......3.6 (c = 80.95238095238093)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
......3.7 (c = 92.06349206349208)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
....5 (c = 42.857142857142854)
....5.4 (c = 87.30158730158729)
......5.2 (c = 65.07936507936508)
........5.1 (c = 53.96825396825396)
......5.3 (c = 76.19047619047618)
........5.1 (c = 53.96825396825396)
....5.6 (c = 109.52380952380952)
......5.3 (c = 76.19047619047618)
........5.1 (c = 53.96825396825396)
........5.2 (c = 65.07936507936508)
......5.5 (c = 98.4126984126984)
........5.2 (c = 65.07936507936508)
..........5.1 (c = 53.96825396825396)
....5.7 (c = 120.63492063492063)"
`;

exports[`Gen.float().between(1, 10).betweenPrecision(0, 2) 4`] = `
"6.8 (c = 146.03174603174602)
..2.8 (c = 88.88888888888889)
....2 (c = 0)
....2.4 (c = 44.44444444444444)
......2.2 (c = 22.22222222222222)
........2.1 (c = 11.11111111111111)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
....2.6 (c = 66.66666666666666)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
........2.2 (c = 22.22222222222222)
......2.5 (c = 55.55555555555556)
........2.2 (c = 22.22222222222222)
..........2.1 (c = 11.11111111111111)
....2.7 (c = 77.77777777777779)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
........2.2 (c = 22.22222222222222)
......2.5 (c = 55.55555555555556)
........2.2 (c = 22.22222222222222)
..........2.1 (c = 11.11111111111111)
..4.8 (c = 117.46031746031746)
....3.8 (c = 103.17460317460316)
......3 (c = 14.285714285714285)
......3.4 (c = 58.73015873015873)
........3.2 (c = 36.507936507936506)
..........3.1 (c = 25.396825396825395)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
......3.6 (c = 80.95238095238093)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
......3.7 (c = 92.06349206349208)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
....4 (c = 28.57142857142857)
....4.4 (c = 73.01587301587301)
......4.2 (c = 50.79365079365079)
........4.1 (c = 39.682539682539684)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
....4.6 (c = 95.23809523809523)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
........4.2 (c = 50.79365079365079)
......4.5 (c = 84.12698412698413)
........4.2 (c = 50.79365079365079)
..........4.1 (c = 39.682539682539684)
....4.7 (c = 106.34920634920636)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
........4.2 (c = 50.79365079365079)
......4.5 (c = 84.12698412698413)
........4.2 (c = 50.79365079365079)
..........4.1 (c = 39.682539682539684)
..5.8 (c = 131.74603174603175)
....3.8 (c = 103.17460317460316)
......3 (c = 14.285714285714285)
......3.4 (c = 58.73015873015873)
........3.2 (c = 36.507936507936506)
..........3.1 (c = 25.396825396825395)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
......3.6 (c = 80.95238095238093)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
......3.7 (c = 92.06349206349208)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
....5 (c = 42.857142857142854)
....5.4 (c = 87.30158730158729)
......5.2 (c = 65.07936507936508)
........5.1 (c = 53.96825396825396)
......5.3 (c = 76.19047619047618)
........5.1 (c = 53.96825396825396)
....5.6 (c = 109.52380952380952)
......5.3 (c = 76.19047619047618)
........5.1 (c = 53.96825396825396)
........5.2 (c = 65.07936507936508)
......5.5 (c = 98.4126984126984)
........5.2 (c = 65.07936507936508)
..........5.1 (c = 53.96825396825396)
....5.7 (c = 120.63492063492063)"
`;

exports[`Gen.float().between(1, 10).betweenPrecision(0, 2) 5`] = `
"6.8 (c = 146.03174603174602)
..2.8 (c = 88.88888888888889)
....2 (c = 0)
....2.4 (c = 44.44444444444444)
......2.2 (c = 22.22222222222222)
........2.1 (c = 11.11111111111111)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
....2.6 (c = 66.66666666666666)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
........2.2 (c = 22.22222222222222)
......2.5 (c = 55.55555555555556)
........2.2 (c = 22.22222222222222)
..........2.1 (c = 11.11111111111111)
....2.7 (c = 77.77777777777779)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
........2.2 (c = 22.22222222222222)
......2.5 (c = 55.55555555555556)
........2.2 (c = 22.22222222222222)
..........2.1 (c = 11.11111111111111)
..4.8 (c = 117.46031746031746)
....3.8 (c = 103.17460317460316)
......3 (c = 14.285714285714285)
......3.4 (c = 58.73015873015873)
........3.2 (c = 36.507936507936506)
..........3.1 (c = 25.396825396825395)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
......3.6 (c = 80.95238095238093)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
......3.7 (c = 92.06349206349208)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
....4 (c = 28.57142857142857)
....4.4 (c = 73.01587301587301)
......4.2 (c = 50.79365079365079)
........4.1 (c = 39.682539682539684)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
....4.6 (c = 95.23809523809523)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
........4.2 (c = 50.79365079365079)
......4.5 (c = 84.12698412698413)
........4.2 (c = 50.79365079365079)
..........4.1 (c = 39.682539682539684)
....4.7 (c = 106.34920634920636)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
........4.2 (c = 50.79365079365079)
......4.5 (c = 84.12698412698413)
........4.2 (c = 50.79365079365079)
..........4.1 (c = 39.682539682539684)
..5.8 (c = 131.74603174603175)
....3.8 (c = 103.17460317460316)
......3 (c = 14.285714285714285)
......3.4 (c = 58.73015873015873)
........3.2 (c = 36.507936507936506)
..........3.1 (c = 25.396825396825395)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
......3.6 (c = 80.95238095238093)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
......3.7 (c = 92.06349206349208)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
....5 (c = 42.857142857142854)
....5.4 (c = 87.30158730158729)
......5.2 (c = 65.07936507936508)
........5.1 (c = 53.96825396825396)
......5.3 (c = 76.19047619047618)
........5.1 (c = 53.96825396825396)
....5.6 (c = 109.52380952380952)
......5.3 (c = 76.19047619047618)
........5.1 (c = 53.96825396825396)
........5.2 (c = 65.07936507936508)
......5.5 (c = 98.4126984126984)
........5.2 (c = 65.07936507936508)
..........5.1 (c = 53.96825396825396)
....5.7 (c = 120.63492063492063)"
`;

exports[`Gen.float().between(1, 10).betweenPrecision(0, 2) 6`] = `
"6.8 (c = 146.03174603174602)
..2.8 (c = 88.88888888888889)
....2 (c = 0)
....2.4 (c = 44.44444444444444)
......2.2 (c = 22.22222222222222)
........2.1 (c = 11.11111111111111)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
....2.6 (c = 66.66666666666666)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
........2.2 (c = 22.22222222222222)
......2.5 (c = 55.55555555555556)
........2.2 (c = 22.22222222222222)
..........2.1 (c = 11.11111111111111)
....2.7 (c = 77.77777777777779)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
........2.2 (c = 22.22222222222222)
......2.5 (c = 55.55555555555556)
........2.2 (c = 22.22222222222222)
..........2.1 (c = 11.11111111111111)
..4.8 (c = 117.46031746031746)
....3.8 (c = 103.17460317460316)
......3 (c = 14.285714285714285)
......3.4 (c = 58.73015873015873)
........3.2 (c = 36.507936507936506)
..........3.1 (c = 25.396825396825395)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
......3.6 (c = 80.95238095238093)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
......3.7 (c = 92.06349206349208)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
....4 (c = 28.57142857142857)
....4.4 (c = 73.01587301587301)
......4.2 (c = 50.79365079365079)
........4.1 (c = 39.682539682539684)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
....4.6 (c = 95.23809523809523)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
........4.2 (c = 50.79365079365079)
......4.5 (c = 84.12698412698413)
........4.2 (c = 50.79365079365079)
..........4.1 (c = 39.682539682539684)
....4.7 (c = 106.34920634920636)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
........4.2 (c = 50.79365079365079)
......4.5 (c = 84.12698412698413)
........4.2 (c = 50.79365079365079)
..........4.1 (c = 39.682539682539684)
..5.8 (c = 131.74603174603175)
....3.8 (c = 103.17460317460316)
......3 (c = 14.285714285714285)
......3.4 (c = 58.73015873015873)
........3.2 (c = 36.507936507936506)
..........3.1 (c = 25.396825396825395)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
......3.6 (c = 80.95238095238093)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
......3.7 (c = 92.06349206349208)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
....5 (c = 42.857142857142854)
....5.4 (c = 87.30158730158729)
......5.2 (c = 65.07936507936508)
........5.1 (c = 53.96825396825396)
......5.3 (c = 76.19047619047618)
........5.1 (c = 53.96825396825396)
....5.6 (c = 109.52380952380952)
......5.3 (c = 76.19047619047618)
........5.1 (c = 53.96825396825396)
........5.2 (c = 65.07936507936508)
......5.5 (c = 98.4126984126984)
........5.2 (c = 65.07936507936508)
..........5.1 (c = 53.96825396825396)
....5.7 (c = 120.63492063492063)"
`;

exports[`Gen.float().between(1, 10).betweenPrecision(0, 2) 7`] = `
"6.8 (c = 146.03174603174602)
..2.8 (c = 88.88888888888889)
....2 (c = 0)
....2.4 (c = 44.44444444444444)
......2.2 (c = 22.22222222222222)
........2.1 (c = 11.11111111111111)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
....2.6 (c = 66.66666666666666)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
........2.2 (c = 22.22222222222222)
......2.5 (c = 55.55555555555556)
........2.2 (c = 22.22222222222222)
..........2.1 (c = 11.11111111111111)
....2.7 (c = 77.77777777777779)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
........2.2 (c = 22.22222222222222)
......2.5 (c = 55.55555555555556)
........2.2 (c = 22.22222222222222)
..........2.1 (c = 11.11111111111111)
..4.8 (c = 117.46031746031746)
....3.8 (c = 103.17460317460316)
......3 (c = 14.285714285714285)
......3.4 (c = 58.73015873015873)
........3.2 (c = 36.507936507936506)
..........3.1 (c = 25.396825396825395)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
......3.6 (c = 80.95238095238093)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
......3.7 (c = 92.06349206349208)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
....4 (c = 28.57142857142857)
....4.4 (c = 73.01587301587301)
......4.2 (c = 50.79365079365079)
........4.1 (c = 39.682539682539684)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
....4.6 (c = 95.23809523809523)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
........4.2 (c = 50.79365079365079)
......4.5 (c = 84.12698412698413)
........4.2 (c = 50.79365079365079)
..........4.1 (c = 39.682539682539684)
....4.7 (c = 106.34920634920636)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
........4.2 (c = 50.79365079365079)
......4.5 (c = 84.12698412698413)
........4.2 (c = 50.79365079365079)
..........4.1 (c = 39.682539682539684)
..5.8 (c = 131.74603174603175)
....3.8 (c = 103.17460317460316)
......3 (c = 14.285714285714285)
......3.4 (c = 58.73015873015873)
........3.2 (c = 36.507936507936506)
..........3.1 (c = 25.396825396825395)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
......3.6 (c = 80.95238095238093)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
......3.7 (c = 92.06349206349208)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
....5 (c = 42.857142857142854)
....5.4 (c = 87.30158730158729)
......5.2 (c = 65.07936507936508)
........5.1 (c = 53.96825396825396)
......5.3 (c = 76.19047619047618)
........5.1 (c = 53.96825396825396)
....5.6 (c = 109.52380952380952)
......5.3 (c = 76.19047619047618)
........5.1 (c = 53.96825396825396)
........5.2 (c = 65.07936507936508)
......5.5 (c = 98.4126984126984)
........5.2 (c = 65.07936507936508)
..........5.1 (c = 53.96825396825396)
....5.7 (c = 120.63492063492063)"
`;

exports[`Gen.float().between(1, 10).betweenPrecision(0, 2) 8`] = `
"6.8 (c = 146.03174603174602)
..2.8 (c = 88.88888888888889)
....2 (c = 0)
....2.4 (c = 44.44444444444444)
......2.2 (c = 22.22222222222222)
........2.1 (c = 11.11111111111111)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
....2.6 (c = 66.66666666666666)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
........2.2 (c = 22.22222222222222)
......2.5 (c = 55.55555555555556)
........2.2 (c = 22.22222222222222)
..........2.1 (c = 11.11111111111111)
....2.7 (c = 77.77777777777779)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
........2.2 (c = 22.22222222222222)
......2.5 (c = 55.55555555555556)
........2.2 (c = 22.22222222222222)
..........2.1 (c = 11.11111111111111)
..4.8 (c = 117.46031746031746)
....3.8 (c = 103.17460317460316)
......3 (c = 14.285714285714285)
......3.4 (c = 58.73015873015873)
........3.2 (c = 36.507936507936506)
..........3.1 (c = 25.396825396825395)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
......3.6 (c = 80.95238095238093)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
......3.7 (c = 92.06349206349208)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
....4 (c = 28.57142857142857)
....4.4 (c = 73.01587301587301)
......4.2 (c = 50.79365079365079)
........4.1 (c = 39.682539682539684)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
....4.6 (c = 95.23809523809523)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
........4.2 (c = 50.79365079365079)
......4.5 (c = 84.12698412698413)
........4.2 (c = 50.79365079365079)
..........4.1 (c = 39.682539682539684)
....4.7 (c = 106.34920634920636)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
........4.2 (c = 50.79365079365079)
......4.5 (c = 84.12698412698413)
........4.2 (c = 50.79365079365079)
..........4.1 (c = 39.682539682539684)
..5.8 (c = 131.74603174603175)
....3.8 (c = 103.17460317460316)
......3 (c = 14.285714285714285)
......3.4 (c = 58.73015873015873)
........3.2 (c = 36.507936507936506)
..........3.1 (c = 25.396825396825395)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
......3.6 (c = 80.95238095238093)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
......3.7 (c = 92.06349206349208)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
....5 (c = 42.857142857142854)
....5.4 (c = 87.30158730158729)
......5.2 (c = 65.07936507936508)
........5.1 (c = 53.96825396825396)
......5.3 (c = 76.19047619047618)
........5.1 (c = 53.96825396825396)
....5.6 (c = 109.52380952380952)
......5.3 (c = 76.19047619047618)
........5.1 (c = 53.96825396825396)
........5.2 (c = 65.07936507936508)
......5.5 (c = 98.4126984126984)
........5.2 (c = 65.07936507936508)
..........5.1 (c = 53.96825396825396)
....5.7 (c = 120.63492063492063)"
`;

exports[`Gen.float().between(1, 10).betweenPrecision(0, 2) 9`] = `
"6.8 (c = 146.03174603174602)
..2.8 (c = 88.88888888888889)
....2 (c = 0)
....2.4 (c = 44.44444444444444)
......2.2 (c = 22.22222222222222)
........2.1 (c = 11.11111111111111)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
....2.6 (c = 66.66666666666666)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
........2.2 (c = 22.22222222222222)
......2.5 (c = 55.55555555555556)
........2.2 (c = 22.22222222222222)
..........2.1 (c = 11.11111111111111)
....2.7 (c = 77.77777777777779)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
........2.2 (c = 22.22222222222222)
......2.5 (c = 55.55555555555556)
........2.2 (c = 22.22222222222222)
..........2.1 (c = 11.11111111111111)
..4.8 (c = 117.46031746031746)
....3.8 (c = 103.17460317460316)
......3 (c = 14.285714285714285)
......3.4 (c = 58.73015873015873)
........3.2 (c = 36.507936507936506)
..........3.1 (c = 25.396825396825395)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
......3.6 (c = 80.95238095238093)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
......3.7 (c = 92.06349206349208)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
....4 (c = 28.57142857142857)
....4.4 (c = 73.01587301587301)
......4.2 (c = 50.79365079365079)
........4.1 (c = 39.682539682539684)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
....4.6 (c = 95.23809523809523)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
........4.2 (c = 50.79365079365079)
......4.5 (c = 84.12698412698413)
........4.2 (c = 50.79365079365079)
..........4.1 (c = 39.682539682539684)
....4.7 (c = 106.34920634920636)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
........4.2 (c = 50.79365079365079)
......4.5 (c = 84.12698412698413)
........4.2 (c = 50.79365079365079)
..........4.1 (c = 39.682539682539684)
..5.8 (c = 131.74603174603175)
....3.8 (c = 103.17460317460316)
......3 (c = 14.285714285714285)
......3.4 (c = 58.73015873015873)
........3.2 (c = 36.507936507936506)
..........3.1 (c = 25.396825396825395)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
......3.6 (c = 80.95238095238093)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
......3.7 (c = 92.06349206349208)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
....5 (c = 42.857142857142854)
....5.4 (c = 87.30158730158729)
......5.2 (c = 65.07936507936508)
........5.1 (c = 53.96825396825396)
......5.3 (c = 76.19047619047618)
........5.1 (c = 53.96825396825396)
....5.6 (c = 109.52380952380952)
......5.3 (c = 76.19047619047618)
........5.1 (c = 53.96825396825396)
........5.2 (c = 65.07936507936508)
......5.5 (c = 98.4126984126984)
........5.2 (c = 65.07936507936508)
..........5.1 (c = 53.96825396825396)
....5.7 (c = 120.63492063492063)"
`;

exports[`Gen.float().between(1, 10).betweenPrecision(0, 2) 10`] = `
"6.8 (c = 146.03174603174602)
..2.8 (c = 88.88888888888889)
....2 (c = 0)
....2.4 (c = 44.44444444444444)
......2.2 (c = 22.22222222222222)
........2.1 (c = 11.11111111111111)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
....2.6 (c = 66.66666666666666)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
........2.2 (c = 22.22222222222222)
......2.5 (c = 55.55555555555556)
........2.2 (c = 22.22222222222222)
..........2.1 (c = 11.11111111111111)
....2.7 (c = 77.77777777777779)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
........2.2 (c = 22.22222222222222)
......2.5 (c = 55.55555555555556)
........2.2 (c = 22.22222222222222)
..........2.1 (c = 11.11111111111111)
..4.8 (c = 117.46031746031746)
....3.8 (c = 103.17460317460316)
......3 (c = 14.285714285714285)
......3.4 (c = 58.73015873015873)
........3.2 (c = 36.507936507936506)
..........3.1 (c = 25.396825396825395)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
......3.6 (c = 80.95238095238093)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
......3.7 (c = 92.06349206349208)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
....4 (c = 28.57142857142857)
....4.4 (c = 73.01587301587301)
......4.2 (c = 50.79365079365079)
........4.1 (c = 39.682539682539684)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
....4.6 (c = 95.23809523809523)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
........4.2 (c = 50.79365079365079)
......4.5 (c = 84.12698412698413)
........4.2 (c = 50.79365079365079)
..........4.1 (c = 39.682539682539684)
....4.7 (c = 106.34920634920636)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
........4.2 (c = 50.79365079365079)
......4.5 (c = 84.12698412698413)
........4.2 (c = 50.79365079365079)
..........4.1 (c = 39.682539682539684)
..5.8 (c = 131.74603174603175)
....3.8 (c = 103.17460317460316)
......3 (c = 14.285714285714285)
......3.4 (c = 58.73015873015873)
........3.2 (c = 36.507936507936506)
..........3.1 (c = 25.396825396825395)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
......3.6 (c = 80.95238095238093)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
......3.7 (c = 92.06349206349208)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
....5 (c = 42.857142857142854)
....5.4 (c = 87.30158730158729)
......5.2 (c = 65.07936507936508)
........5.1 (c = 53.96825396825396)
......5.3 (c = 76.19047619047618)
........5.1 (c = 53.96825396825396)
....5.6 (c = 109.52380952380952)
......5.3 (c = 76.19047619047618)
........5.1 (c = 53.96825396825396)
........5.2 (c = 65.07936507936508)
......5.5 (c = 98.4126984126984)
........5.2 (c = 65.07936507936508)
..........5.1 (c = 53.96825396825396)
....5.7 (c = 120.63492063492063)"
`;

exports[`Gen.float().between(1, 10).betweenPrecision(0, 2) 11`] = `
"6.8 (c = 146.03174603174602)
..2.8 (c = 88.88888888888889)
....2 (c = 0)
....2.4 (c = 44.44444444444444)
......2.2 (c = 22.22222222222222)
........2.1 (c = 11.11111111111111)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
....2.6 (c = 66.66666666666666)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
........2.2 (c = 22.22222222222222)
......2.5 (c = 55.55555555555556)
........2.2 (c = 22.22222222222222)
..........2.1 (c = 11.11111111111111)
....2.7 (c = 77.77777777777779)
......2.3 (c = 33.33333333333333)
........2.1 (c = 11.11111111111111)
........2.2 (c = 22.22222222222222)
......2.5 (c = 55.55555555555556)
........2.2 (c = 22.22222222222222)
..........2.1 (c = 11.11111111111111)
..4.8 (c = 117.46031746031746)
....3.8 (c = 103.17460317460316)
......3 (c = 14.285714285714285)
......3.4 (c = 58.73015873015873)
........3.2 (c = 36.507936507936506)
..........3.1 (c = 25.396825396825395)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
......3.6 (c = 80.95238095238093)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
......3.7 (c = 92.06349206349208)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
....4 (c = 28.57142857142857)
....4.4 (c = 73.01587301587301)
......4.2 (c = 50.79365079365079)
........4.1 (c = 39.682539682539684)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
....4.6 (c = 95.23809523809523)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
........4.2 (c = 50.79365079365079)
......4.5 (c = 84.12698412698413)
........4.2 (c = 50.79365079365079)
..........4.1 (c = 39.682539682539684)
....4.7 (c = 106.34920634920636)
......4.3 (c = 61.9047619047619)
........4.1 (c = 39.682539682539684)
........4.2 (c = 50.79365079365079)
......4.5 (c = 84.12698412698413)
........4.2 (c = 50.79365079365079)
..........4.1 (c = 39.682539682539684)
..5.8 (c = 131.74603174603175)
....3.8 (c = 103.17460317460316)
......3 (c = 14.285714285714285)
......3.4 (c = 58.73015873015873)
........3.2 (c = 36.507936507936506)
..........3.1 (c = 25.396825396825395)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
......3.6 (c = 80.95238095238093)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
......3.7 (c = 92.06349206349208)
........3.3 (c = 47.61904761904761)
..........3.1 (c = 25.396825396825395)
..........3.2 (c = 36.507936507936506)
........3.5 (c = 69.84126984126985)
..........3.2 (c = 36.507936507936506)
............3.1 (c = 25.396825396825395)
....5 (c = 42.857142857142854)
....5.4 (c = 87.30158730158729)
......5.2 (c = 65.07936507936508)
........5.1 (c = 53.96825396825396)
......5.3 (c = 76.19047619047618)
........5.1 (c = 53.96825396825396)
....5.6 (c = 109.52380952380952)
......5.3 (c = 76.19047619047618)
........5.1 (c = 53.96825396825396)
........5.2 (c = 65.07936507936508)
......5.5 (c = 98.4126984126984)
........5.2 (c = 65.07936507936508)
..........5.1 (c = 53.96825396825396)
....5.7 (c = 120.63492063492063)"
`;
